feat: Enhance testing setup with new dependencies and configurations
- Add test dependencies for integration testing, including Testcontainers, Spring Security Test, and Mockito.
- Configure Maven Surefire and Failsafe plugins for unit and integration tests.
- Update .gitignore to include test-related directories.
- Modify ClusterLimitsIntegrationTest to extend base integration test class and improve container management.